src/main/java/cn/edu/nju/tools/condition/grammar/spliter/SpliterParser.java
// Generated from D:/Antlr-SQLGraphExplorer/SQLGraphExplorer/src/main/java/cn/edu/nju/tools/condition/grammar/spliter/SpliterParser.g4 by ANTLR 4.13.1
package cn.edu.nju.tools.condition.grammar.spliter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SpliterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, NOT=3, TRUE=4, FALSE=5, GT=6, GE=7, LT=8, LE=9, EQ=10, LPAREN=11, 
		RPAREN=12, COMMA=13, DOT=14, DECIMAL=15, IDENTIFIER=16, PUNCTUATION=17, 
		WS=18;
	public static final int
		RULE_parse = 0, RULE_rootExpression = 1, RULE_orSplitExpression = 2, RULE_expression = 3, 
		RULE_multiAndsExpression = 4, RULE_multiOrsExpression = 5, RULE_parenExpression = 6, 
		RULE_unitExpression = 7, RULE_basicExpression = 8, RULE_funcExpression = 9, 
		RULE_colExpression = 10, RULE_functionName = 11, RULE_trueExpression = 12, 
		RULE_falseExpression = 13, RULE_comparator = 14, RULE_atom = 15, RULE_bool = 16, 
		RULE_identifer = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "rootExpression", "orSplitExpression", "expression", "multiAndsExpression", 
			"multiOrsExpression", "parenExpression", "unitExpression", "basicExpression", 
			"funcExpression", "colExpression", "functionName", "trueExpression", 
			"falseExpression", "comparator", "atom", "bool", "identifer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AND'", "'OR'", "'NOT'", "'TRUE'", "'FALSE'", "'>'", "'>='", "'<'", 
			"'<='", "'='", "'('", "')'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "OR", "NOT", "TRUE", "FALSE", "GT", "GE", "LT", "LE", "EQ", 
			"LPAREN", "RPAREN", "COMMA", "DOT", "DECIMAL", "IDENTIFIER", "PUNCTUATION", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpliterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpliterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SpliterParser.EOF, 0); }
		public RootExpressionContext rootExpression() {
			return getRuleContext(RootExpressionContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(36);
				rootExpression();
				}
				break;
			}
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootExpressionContext extends ParserRuleContext {
		public RootExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootExpression; }
	 
		public RootExpressionContext() { }
		public void copyFrom(RootExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CantSplitExpressionContext extends RootExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CantSplitExpressionContext(RootExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitCantSplitExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RootAndsExpressionContext extends RootExpressionContext {
		public MultiAndsExpressionContext multiAndsExpression() {
			return getRuleContext(MultiAndsExpressionContext.class,0);
		}
		public RootAndsExpressionContext(RootExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitRootAndsExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrSplitsExressionContext extends RootExpressionContext {
		public OrSplitExpressionContext orSplitExpression() {
			return getRuleContext(OrSplitExpressionContext.class,0);
		}
		public OrSplitsExressionContext(RootExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrSplitsExression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiRootExpressionContext extends RootExpressionContext {
		public TerminalNode LPAREN() { return getToken(SpliterParser.LPAREN, 0); }
		public RootExpressionContext rootExpression() {
			return getRuleContext(RootExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpliterParser.RPAREN, 0); }
		public MultiRootExpressionContext(RootExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitMultiRootExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RootOrsExpressionContext extends RootExpressionContext {
		public MultiOrsExpressionContext multiOrsExpression() {
			return getRuleContext(MultiOrsExpressionContext.class,0);
		}
		public RootOrsExpressionContext(RootExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitRootOrsExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootExpressionContext rootExpression() throws RecognitionException {
		RootExpressionContext _localctx = new RootExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rootExpression);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new RootAndsExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				multiAndsExpression();
				}
				break;
			case 2:
				_localctx = new RootOrsExpressionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				multiOrsExpression();
				}
				break;
			case 3:
				_localctx = new MultiRootExpressionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(43);
				match(LPAREN);
				setState(44);
				rootExpression();
				setState(45);
				match(RPAREN);
				}
				break;
			case 4:
				_localctx = new OrSplitsExressionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(47);
				orSplitExpression(0);
				}
				break;
			case 5:
				_localctx = new CantSplitExpressionContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(48);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrSplitExpressionContext extends ParserRuleContext {
		public OrSplitExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orSplitExpression; }
	 
		public OrSplitExpressionContext() { }
		public void copyFrom(OrSplitExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrSplitBasicExpressionContext extends OrSplitExpressionContext {
		public List<UnitExpressionContext> unitExpression() {
			return getRuleContexts(UnitExpressionContext.class);
		}
		public UnitExpressionContext unitExpression(int i) {
			return getRuleContext(UnitExpressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(SpliterParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(SpliterParser.OR, i);
		}
		public OrSplitBasicExpressionContext(OrSplitExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrSplitBasicExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrSplitParenExpressionContext extends OrSplitExpressionContext {
		public TerminalNode LPAREN() { return getToken(SpliterParser.LPAREN, 0); }
		public OrSplitExpressionContext orSplitExpression() {
			return getRuleContext(OrSplitExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpliterParser.RPAREN, 0); }
		public OrSplitParenExpressionContext(OrSplitExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrSplitParenExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrSplitRecursiveExpressionContext extends OrSplitExpressionContext {
		public List<OrSplitExpressionContext> orSplitExpression() {
			return getRuleContexts(OrSplitExpressionContext.class);
		}
		public OrSplitExpressionContext orSplitExpression(int i) {
			return getRuleContext(OrSplitExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(SpliterParser.OR, 0); }
		public OrSplitRecursiveExpressionContext(OrSplitExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrSplitRecursiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrSplitExpressionContext orSplitExpression() throws RecognitionException {
		return orSplitExpression(0);
	}

	private OrSplitExpressionContext orSplitExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OrSplitExpressionContext _localctx = new OrSplitExpressionContext(_ctx, _parentState);
		OrSplitExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_orSplitExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new OrSplitParenExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(52);
				match(LPAREN);
				setState(53);
				orSplitExpression(0);
				setState(54);
				match(RPAREN);
				}
				break;
			case 2:
				{
				_localctx = new OrSplitBasicExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				unitExpression();
				setState(59); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(57);
						match(OR);
						setState(58);
						unitExpression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(61); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OrSplitRecursiveExpressionContext(new OrSplitExpressionContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_orSplitExpression);
					setState(65);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(66);
					match(OR);
					setState(67);
					orSplitExpression(3);
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndsExpressionContext extends ExpressionContext {
		public MultiAndsExpressionContext multiAndsExpression() {
			return getRuleContext(MultiAndsExpressionContext.class,0);
		}
		public AndsExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitAndsExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OR() { return getToken(SpliterParser.OR, 0); }
		public OrExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AndExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(SpliterParser.AND, 0); }
		public AndExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitAndExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParensExpressionContext extends ExpressionContext {
		public ParenExpressionContext parenExpression() {
			return getRuleContext(ParenExpressionContext.class,0);
		}
		public ParensExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitParensExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NotExpressionContext extends ExpressionContext {
		public TerminalNode NOT() { return getToken(SpliterParser.NOT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NotExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitNotExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrsExpressionContext extends ExpressionContext {
		public MultiOrsExpressionContext multiOrsExpression() {
			return getRuleContext(MultiOrsExpressionContext.class,0);
		}
		public OrsExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitOrsExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BasicBlockExpressionContext extends ExpressionContext {
		public BasicExpressionContext basicExpression() {
			return getRuleContext(BasicExpressionContext.class,0);
		}
		public BasicBlockExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitBasicBlockExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				_localctx = new AndsExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(74);
				multiAndsExpression();
				}
				break;
			case 2:
				{
				_localctx = new OrsExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(75);
				multiOrsExpression();
				}
				break;
			case 3:
				{
				_localctx = new BasicBlockExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(76);
				basicExpression(0);
				}
				break;
			case 4:
				{
				_localctx = new ParensExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(77);
				parenExpression();
				}
				break;
			case 5:
				{
				_localctx = new NotExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(78);
				match(NOT);
				setState(79);
				expression(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(88);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(82);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(83);
						match(AND);
						setState(84);
						expression(4);
						}
						break;
					case 2:
						{
						_localctx = new OrExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(85);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(86);
						match(OR);
						setState(87);
						expression(3);
						}
						break;
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiAndsExpressionContext extends ParserRuleContext {
		public MultiAndsExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiAndsExpression; }
	 
		public MultiAndsExpressionContext() { }
		public void copyFrom(MultiAndsExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiAndsBasicExpressionContext extends MultiAndsExpressionContext {
		public List<TerminalNode> LPAREN() { return getTokens(SpliterParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(SpliterParser.LPAREN, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(SpliterParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(SpliterParser.AND, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(SpliterParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(SpliterParser.RPAREN, i);
		}
		public MultiAndsBasicExpressionContext(MultiAndsExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitMultiAndsBasicExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiAndsRecursiveExpressionContext extends MultiAndsExpressionContext {
		public TerminalNode LPAREN() { return getToken(SpliterParser.LPAREN, 0); }
		public MultiAndsExpressionContext multiAndsExpression() {
			return getRuleContext(MultiAndsExpressionContext.class,0);
		}
		public TerminalNode AND() { return getToken(SpliterParser.AND, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SpliterParser.RPAREN, 0); }
		public MultiAndsRecursiveExpressionContext(MultiAndsExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpliterParserVisitor ) return ((SpliterParserVisitor<? extends T>)visitor).visitMultiAndsRecursiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiAndsExpressionContext multiAndsExpression() throws RecognitionException {
		MultiAndsExpressionContext _localctx = new MultiAndsExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multiAndsExpression);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new MultiAndsRecursiveExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(LPAREN);
				setState(94);
				multiAndsExpression();
				setState(95);
				match(AND);
				setState(96);
				expression(0);
				setState(97);
				match(RPAREN);
				}
				break;
			case 2:
				_localctx = new MultiAndsRecursiveExpressionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(LPAREN);
				setState(100);
				expression(0);
				setState(101);
				match(AND);
				setState(102);
				multiAndsExpression();
				setState(103);
				match(RPAREN);
				}
				break;
			case 3:
				_localctx = new MultiAndsBasicExpressionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(LPAREN);
				setState(106);
				match(LPAREN);
				setState(107);
				expression(0);
				setState(108);
				match(AND);
				setState(109);
				expression(0);
				setState(110);
				match(RPAREN);
				setState(111);
				match(AND);
				setState(112);
				expression(0);
				setState(113);
				match(RPAREN);
				}
				break;
			case 4:
				_localctx = new MultiAndsBasicExpressionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(LPAREN);
				setState(116);
				expression(0);
				setState(117);
				match(AND);
				setState(118);
				match(LPAREN);
				setState(119);
				expression(0);
				setState(120);
				match(AND);
				setState(121);
				expression(0);
				setState(122);
				match(RPAREN);
				setState(123);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
